spacing fixups

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -214,7 +214,7 @@ a.tickets-button:hover {
 .featured-person {
     flex: 0 0 20%;
     text-align: center;
-    padding: 0 10px;
+    padding: 10px;
 }
 
 h4.person-title {
@@ -236,6 +236,7 @@ h4.person-title {
   background: url("/assets/images/globe.png") no-repeat;
 }
 .featured-person a.twitter {
+  width: 40px;
   background: url("/assets/images/twitter.png") no-repeat;
 }
 
